[tool.poetry]
name = "pyfboot"
packages = [{include = "pyfboot"}]
version = "0.2.0"
description = "Forte fboot Generator"
authors = ["Aimirim Team <contato@aimirimsti.com.br>"]
include = ["License"]
readme = 'README.md'
repository = "https://github.com/Aimirim-STI/pyfboot"
homepage = "https://aimirimsti.com.br"

[tool.poetry.dependencies]
python = "^3.8"
fsspec = ">=2021.4"
paramiko = "*"
lxml = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
wheel = "*"
build = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
